<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EatWhat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_label_username">账号</string>
    <string name="login_username_hint">Please input your name</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登陆</string>
    <string name="register">注册</string>
    <string name="ensure">确认密码</string>

</resources>
