<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login">
    <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div"
        android:padding="15dip" >
        
        <TextView
            android:id="@+id/login_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/username_edit"
            android:layout_below="@+id/registe_button1"
            android:text="@string/login_label_username" />
        
        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/login_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/password_edit"
            android:layout_alignRight="@+id/password_edit"
            android:layout_below="@+id/password_edit"
            android:layout_marginTop="14dp"
            android:background="@drawable/button"
            android:text="@string/login_label_signin" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_password_input"
            android:layout_below="@+id/login_password_input"
            android:ems="10"
            android:inputType="textPassword"
            android:password="true"
            android:singleLine="true" />



        <Button
            android:id="@+id/registe_button1"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/register" />

    </RelativeLayout>
  
 <!-- 	<RelativeLayout 
      	android:layout_width="fill_parent"
      	android:layout_height="wrap_content" >
     <TextView  android:id="@+id/register_link"
         android:text="@string/login_register_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:textColor="#888"
         android:textColorLink="#FF0066CC" />
    <ImageView android:id="@+id/miniTwitter_logo"
        android:src="@drawable/cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp" />
    <ImageView android:src="@drawable/logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@id/miniTwitter_logo"
      android:layout_alignBottom="@id/miniTwitter_logo"
      android:paddingBottom="8dp"/>
  	</RelativeLayout>  --> 
</LinearLayout>